{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 33,
  "lineage": "93f1d49a-9a96-5020-ea34-74bd1034f8e0",
  "resources": [
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:network-acl/acl-0ef82c4147b38cd0a",
            "default_network_acl_id": "acl-0ef82c4147b38cd0a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ef82c4147b38cd0a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "687402348559",
            "subnet_ids": [
              "subnet-00f794958d4c81f04",
              "subnet-02ccc710279918abc",
              "subnet-02cfed9fcb56283c5",
              "subnet-053c389b6556f8d81",
              "subnet-08bee3a0ad21a3c7f",
              "subnet-0c76e7131721a9ffe"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:route-table/rtb-0d1d918c669d2ec3f",
            "default_route_table_id": "rtb-0d1d918c669d2ec3f",
            "id": "rtb-0d1d918c669d2ec3f",
            "owner_id": "687402348559",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:security-group/sg-044f79379625d940c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-044f79379625d940c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "687402348559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3124eb3a653ea47",
            "domain": "vpc",
            "id": "eipalloc-0f3124eb3a653ea47",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-133-218.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.133.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc60de7b34792903",
            "domain": "vpc",
            "id": "eipalloc-0dc60de7b34792903",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-21-92.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.21.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2533d91644e70ba",
            "domain": "vpc",
            "id": "eipalloc-0f2533d91644e70ba",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-71-161.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.71.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:internet-gateway/igw-018b23d1abf0d677e",
            "id": "igw-018b23d1abf0d677e",
            "owner_id": "687402348559",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3124eb3a653ea47",
            "association_id": "eipassoc-07a80d772f9e33def",
            "connectivity_type": "public",
            "id": "nat-03aa3388ee792dbd1",
            "network_interface_id": "eni-08bec7e5a6b98fd0e",
            "private_ip": "10.0.101.227",
            "public_ip": "13.41.133.218",
            "subnet_id": "subnet-00f794958d4c81f04",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc60de7b34792903",
            "association_id": "eipassoc-03f32f5fe8de52e84",
            "connectivity_type": "public",
            "id": "nat-0f7c56133d786e8e8",
            "network_interface_id": "eni-0f695d8958ca19afd",
            "private_ip": "10.0.102.195",
            "public_ip": "13.43.21.92",
            "subnet_id": "subnet-08bee3a0ad21a3c7f",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2533d91644e70ba",
            "association_id": "eipassoc-0eb8fc34791d0dbc9",
            "connectivity_type": "public",
            "id": "nat-0faf7c727832055a3",
            "network_interface_id": "eni-0c1c88038e3c3b2c9",
            "private_ip": "10.0.103.176",
            "public_ip": "52.56.71.161",
            "subnet_id": "subnet-053c389b6556f8d81",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-eu-west-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb15136789ea7e691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03aa3388ee792dbd1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb15136789ea7e69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7e6d8dab2aff7741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f7c56133d786e8e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7e6d8dab2aff774",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-079fc724fd3e778be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0faf7c727832055a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079fc724fd3e778be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018b23d1abf0d677e",
            "id": "r-rtb-0475ab3152cb4e1a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0475ab3152cb4e1a0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:route-table/rtb-0cb15136789ea7e69",
            "id": "rtb-0cb15136789ea7e69",
            "owner_id": "687402348559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:route-table/rtb-0f7e6d8dab2aff774",
            "id": "rtb-0f7e6d8dab2aff774",
            "owner_id": "687402348559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:route-table/rtb-079fc724fd3e778be",
            "id": "rtb-079fc724fd3e778be",
            "owner_id": "687402348559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:route-table/rtb-0475ab3152cb4e1a0",
            "id": "rtb-0475ab3152cb4e1a0",
            "owner_id": "687402348559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067561416ce712696",
            "route_table_id": "rtb-0cb15136789ea7e69",
            "subnet_id": "subnet-02cfed9fcb56283c5"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0266a5a09f0b9ba74",
            "route_table_id": "rtb-0f7e6d8dab2aff774",
            "subnet_id": "subnet-02ccc710279918abc"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016c1af2ba520a255",
            "route_table_id": "rtb-079fc724fd3e778be",
            "subnet_id": "subnet-0c76e7131721a9ffe"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0468c476e7eeef0bd",
            "route_table_id": "rtb-0475ab3152cb4e1a0",
            "subnet_id": "subnet-00f794958d4c81f04"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb3d92b0536b755e",
            "route_table_id": "rtb-0475ab3152cb4e1a0",
            "subnet_id": "subnet-08bee3a0ad21a3c7f"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075ee5e053ee1d2f1",
            "route_table_id": "rtb-0475ab3152cb4e1a0",
            "subnet_id": "subnet-053c389b6556f8d81"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:subnet/subnet-02cfed9fcb56283c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cfed9fcb56283c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687402348559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:subnet/subnet-02ccc710279918abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ccc710279918abc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687402348559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:subnet/subnet-0c76e7131721a9ffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c76e7131721a9ffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687402348559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-private-eu-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:subnet/subnet-00f794958d4c81f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f794958d4c81f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687402348559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:subnet/subnet-08bee3a0ad21a3c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bee3a0ad21a3c7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687402348559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-public-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-public-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:subnet/subnet-053c389b6556f8d81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c389b6556f8d81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "687402348559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project-public-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project-public-eu-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04b49aa2ee7cd6d89"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:687402348559:vpc/vpc-04b49aa2ee7cd6d89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef82c4147b38cd0a",
            "default_route_table_id": "rtb-0d1d918c669d2ec3f",
            "default_security_group_id": "sg-044f79379625d940c",
            "dhcp_options_id": "dopt-015d0d14799ebc23f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b49aa2ee7cd6d89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1d918c669d2ec3f",
            "owner_id": "687402348559",
            "tags": {
              "Environment": "dev",
              "Name": "tt-final-project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tt-final-project",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}